--- a/package.json
+++ b/package.json
@@ -7,23 +7,28 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "boxen": "^8.0.1",
+    "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "mongoose": "^8.6.3",
+    "node-notifier": "^10.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run server\" \"react-scripts start\"",
+    "start-electron": "electron electron.js",
+    "server": "nodemon src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon src/server.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
+    "electron": "^34.2.0",
     "nodemon": "^3.1.7",
     "tailwindcss": "^3.4.13"
   }
