--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "mongoose": "^8.6.3",
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
+    "mongoose": "^8.10.1",
     "node-notifier": "^10.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,6 +27,7 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"react-scripts start\"",
     "start-electron": "electron electron.js",
+    "start-bot": "node src/discord/bot.js",
     "server": "nodemon src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
