--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start": "concurrently \"npm run server\" \"react-scripts start\"",
     "start-electron": "electron electron.js",
     "start-bot": "node src/discord/bot.js",
+    "start-ticket-bot": "node src/discord/ticketBot.js",
     "server": "nodemon src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
