--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "start-ticket-bot": "node src/discord/ticketBot.js",
     "server": "nodemon src/server.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,8 +59,12 @@
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
+    "cross-fetch": "^4.1.0",
     "electron": "^34.2.0",
+    "jest": "^27.5.1",
     "nodemon": "^3.1.7",
+    "supertest": "^7.1.0",
     "tailwindcss": "^3.4.13"
   }
 }
